@@ -249,9 +249,9 @@ int            event_operator_match   (EventOperator *oper, Event *event);
 
 int            event_operator_handle  (EventOperator *root, Event *event);
 
-void           event_operator_collect (EventOperator *root, NihList *list,
-				       char ***env, const void *parent,
-				       size_t *len, const char *key);
+void           event_operator_collect (EventOperator *root, char ***env,
+				       const void *parent, size_t *len,
+				       const char *key, NihList *list);
 
 void           event_operator_unblock (EventOperator *root);
 void           event_operator_reset   (EventOperator *root);
